// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/pager > Snapshots > should match snapshot for default pager 1`] = `
<div
  className="fui-FluentProvider fui-FluentProviderr0 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
  dir="ltr"
>
  <div>
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="fui-Button r1alrhcs ___1hoin62_1sy9556 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1s2aq7o f9ql6rf f1s2uweq fr80ssc f1ukrpxl fecsdlb fvgxktp f19vpps7 fv5swzo f1al02dq f3h1zc4 f1h0usnq fs4ktlq f16h9ulv fx2bmrt fcvwxyo f1ol4fw6 f1q1lw4e f1dwjv2g f1kc2mi9 f4dhi0o fb3rf2x fequ9m0 f44lkw9 fdrzuqr f15x8b5r fphbwmw f8w4c43 f4lkoma fg455y9 f1rvyvqg f1cwzwz f14g86mu f1dcs8yz fuigjrg fjwq6ea f1lr3nhc fn5gmvv f1mbxvi6 f1vmkb5g f53ppgq f1663y11 f18v5270 f80fkiy f1y0svfh fihuait fnxhupq fx507ft fyd6l6x f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <div
          className="___kwjyko0_0000000 f5gciec f1kzud02 fby29hu f22iagw f122n59 f19jf40t fkn17b6 f1vze9yt f17wnm97 fie1fqi"
        >
          <span
            className="fui-Input r1oeeo9n ___2oz47i0_1cwiks3 f1pha7fy fk6fouc fy9rknc figsok6 fwrc4pm f1c21dwh fokr779 f1ern45e f1n71otn f1deefiw f1n6gb5g f15yvnhg f1l4zc64 f1klwx88 f2ale1x f6zmzpu f17mccla"
          >
            <input
              aria-label="1 of 5"
              className="fui-Input__input r12stul0 ___dmmac90_19wzd1i f1f5gg8d f1vdfbxk"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="1"
            />
          </span>
          <span
            className="fui-Text ___1k47ncw_19qhvw8 fk6fouc fy9rknc f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
          >
            of 5
          </span>
        </div>
      </div>
      <button
        aria-label="Next"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/pager > Snapshots > should match snapshot for disabled state (single page) 1`] = `
<div
  className="fui-FluentProvider fui-FluentProviderrh ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
  dir="ltr"
>
  <div>
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="fui-Button r1alrhcs ___1hoin62_1sy9556 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1s2aq7o f9ql6rf f1s2uweq fr80ssc f1ukrpxl fecsdlb fvgxktp f19vpps7 fv5swzo f1al02dq f3h1zc4 f1h0usnq fs4ktlq f16h9ulv fx2bmrt fcvwxyo f1ol4fw6 f1q1lw4e f1dwjv2g f1kc2mi9 f4dhi0o fb3rf2x fequ9m0 f44lkw9 fdrzuqr f15x8b5r fphbwmw f8w4c43 f4lkoma fg455y9 f1rvyvqg f1cwzwz f14g86mu f1dcs8yz fuigjrg fjwq6ea f1lr3nhc fn5gmvv f1mbxvi6 f1vmkb5g f53ppgq f1663y11 f18v5270 f80fkiy f1y0svfh fihuait fnxhupq fx507ft fyd6l6x f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <div
          className="___kwjyko0_0000000 f5gciec f1kzud02 fby29hu f22iagw f122n59 f19jf40t fkn17b6 f1vze9yt f17wnm97 fie1fqi"
        >
          <span
            className="fui-Input r1oeeo9n ___2oz47i0_1cwiks3 f1pha7fy fk6fouc fy9rknc figsok6 fwrc4pm f1c21dwh fokr779 f1ern45e f1n71otn f1deefiw f1n6gb5g f15yvnhg f1l4zc64 f1klwx88 f2ale1x f6zmzpu f17mccla"
          >
            <input
              aria-label="1 of 1"
              className="fui-Input__input r12stul0 ___dmmac90_19wzd1i f1f5gg8d f1vdfbxk"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="1"
            />
          </span>
          <span
            className="fui-Text ___1k47ncw_19qhvw8 fk6fouc fy9rknc f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
          >
            of 1
          </span>
        </div>
      </div>
      <button
        aria-label="Next"
        className="fui-Button r1alrhcs ___1hoin62_1sy9556 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1s2aq7o f9ql6rf f1s2uweq fr80ssc f1ukrpxl fecsdlb fvgxktp f19vpps7 fv5swzo f1al02dq f3h1zc4 f1h0usnq fs4ktlq f16h9ulv fx2bmrt fcvwxyo f1ol4fw6 f1q1lw4e f1dwjv2g f1kc2mi9 f4dhi0o fb3rf2x fequ9m0 f44lkw9 fdrzuqr f15x8b5r fphbwmw f8w4c43 f4lkoma fg455y9 f1rvyvqg f1cwzwz f14g86mu f1dcs8yz fuigjrg fjwq6ea f1lr3nhc fn5gmvv f1mbxvi6 f1vmkb5g f53ppgq f1663y11 f18v5270 f80fkiy f1y0svfh fihuait fnxhupq fx507ft fyd6l6x f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/pager > Snapshots > should match snapshot for pager with clickable page numbers 1`] = `
<div
  className="fui-FluentProvider fui-FluentProviderr3 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
  dir="ltr"
>
  <div>
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <span
          className="fui-Text ___aw5afd0_1qsccx7 fk6fouc fy9rknc f1i3iumi fdj6btp fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1yqiaad fwbpcpn f1k6fduh f16muhyy f7o03ib f1of9w45 f17wnm97 f1knas48 f154bhm6"
          onClick={[Function]}
        >
          1
        </span>
        <span
          className="fui-Text ___aw5afd0_1qsccx7 fk6fouc fy9rknc f1i3iumi fdj6btp fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1yqiaad fwbpcpn f1k6fduh f16muhyy f7o03ib f1of9w45 f17wnm97 f1knas48 f154bhm6"
          onClick={[Function]}
        >
          2
        </span>
        <span
          className="fui-Text ___16wlxg1_10a66dc fk6fouc fy9rknc f1i3iumi fdj6btp fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1yqiaad fwbpcpn f158kwzp f1phragk f7o03ib f1of9w45 f17wnm97 ffp7eso"
          onClick={[Function]}
        >
          3
        </span>
        <span
          className="fui-Text ___aw5afd0_1qsccx7 fk6fouc fy9rknc f1i3iumi fdj6btp fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1yqiaad fwbpcpn f1k6fduh f16muhyy f7o03ib f1of9w45 f17wnm97 f1knas48 f154bhm6"
          onClick={[Function]}
        >
          4
        </span>
        <span
          className="fui-Text ___aw5afd0_1qsccx7 fk6fouc fy9rknc f1i3iumi fdj6btp fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f1yqiaad fwbpcpn f1k6fduh f16muhyy f7o03ib f1of9w45 f17wnm97 f1knas48 f154bhm6"
          onClick={[Function]}
        >
          5
        </span>
      </div>
      <button
        aria-label="Next"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/pager > Snapshots > should match snapshot for pager with count display 1`] = `
<div
  className="fui-FluentProvider fui-FluentProviderr9 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
  dir="ltr"
>
  <div
    className="___163jbpa_0000000 f22iagw f1869bpl f122n59"
  >
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
    >
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <span
          className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
        >
          Showing 11 - 20 of 50 results.
        </span>
      </div>
    </div>
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <div
          className="___kwjyko0_0000000 f5gciec f1kzud02 fby29hu f22iagw f122n59 f19jf40t fkn17b6 f1vze9yt f17wnm97 fie1fqi"
        >
          <span
            className="fui-Input r1oeeo9n ___2oz47i0_1cwiks3 f1pha7fy fk6fouc fy9rknc figsok6 fwrc4pm f1c21dwh fokr779 f1ern45e f1n71otn f1deefiw f1n6gb5g f15yvnhg f1l4zc64 f1klwx88 f2ale1x f6zmzpu f17mccla"
          >
            <input
              aria-label="2 of 5"
              className="fui-Input__input r12stul0 ___dmmac90_19wzd1i f1f5gg8d f1vdfbxk"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="2"
            />
          </span>
          <span
            className="fui-Text ___1k47ncw_19qhvw8 fk6fouc fy9rknc f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
          >
            of 5
          </span>
        </div>
      </div>
      <button
        aria-label="Next"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
    <div />
  </div>
</div>
`;

exports[`lib/pager > Snapshots > should match snapshot for pager with failed iteration props 1`] = `
<div
  className="fui-FluentProvider fui-FluentProviderrc ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
  dir="ltr"
>
  <div>
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <div
        className="___77lcry0_0000000 f10pi13n"
      >
        <button
          aria-label="Previous failed"
          className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <span
              data-testid="fluent-icon"
            />
          </span>
        </button>
        <span
          className="___27ei560_kknnmb0 f1euv43f f1mybs0q f1hcrxcs f1aehjj5 f1vgc2s3"
          data-icon-name="ImportantFilled"
        />
      </div>
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <div
          className="___kwjyko0_0000000 f5gciec f1kzud02 fby29hu f22iagw f122n59 f19jf40t fkn17b6 f1vze9yt f17wnm97 fie1fqi"
        >
          <span
            className="fui-Input r1oeeo9n ___2oz47i0_1cwiks3 f1pha7fy fk6fouc fy9rknc figsok6 fwrc4pm f1c21dwh fokr779 f1ern45e f1n71otn f1deefiw f1n6gb5g f15yvnhg f1l4zc64 f1klwx88 f2ale1x f6zmzpu f17mccla"
          >
            <input
              aria-label="2 of 5"
              className="fui-Input__input r12stul0 ___dmmac90_19wzd1i f1f5gg8d f1vdfbxk"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="2"
            />
          </span>
          <span
            className="fui-Text ___1k47ncw_19qhvw8 fk6fouc fy9rknc f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649 f11d4kpn"
          >
            of 5
          </span>
        </div>
      </div>
      <div
        className="___77lcry0_0000000 f10pi13n"
      >
        <button
          aria-label="Next failed"
          className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <span
              data-testid="fluent-icon"
            />
          </span>
        </button>
        <span
          className="___1dp8gus_q1pg110 f1euv43f f1mybs0q f1hcrxcs f1aehjj5 f1e31b4d"
          data-icon-name="ImportantFilled"
        />
      </div>
      <button
        aria-label="Next"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`lib/pager > Snapshots > should match snapshot for readonly pager 1`] = `
<div
  className="fui-FluentProvider fui-FluentProviderr6 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
  dir="ltr"
>
  <div>
    <div
      className="___139oj93_0000000 f22iagw f122n59 f4d9j23 f19jf40t fduql59 f10pi13n"
      onClick={[Function]}
    >
      <button
        aria-label="Previous"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
      <div
        className="___mwxu0x0_0000000 f1d2rq10 f22iagw f122n59 f19jf40t"
      >
        <span
          className="fui-Text ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
        >
          2 of 5
        </span>
      </div>
      <button
        aria-label="Next"
        className="fui-Button r1alrhcs ___18vzs3l_jbqu760 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f44lkw9 f1062rbf f18ktai2 fwbmr0d f44c6la"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPointerEnter={[Function]}
        onPointerLeave={[Function]}
        type="button"
      >
        <span
          className="fui-Button__icon rywnvv2"
        >
          <span
            data-testid="fluent-icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
